feat: Added GPX export api
